Fix image cropping to use native canvas

--- a/style.css
+++ b/style.css
@@ -251,9 +251,6 @@ header h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     z-index: 1;
 }
 
